Protect against remote root folders that don't start at the root

--- a/src/main/resources/org/jenkinsci/plugins/publishoverdropbox/impl/Messages.properties
+++ b/src/main/resources/org/jenkinsci/plugins/publishoverdropbox/impl/Messages.properties
@@ -26,6 +26,7 @@ DropboxTokenImpl.api_token=Dropbox API token
 descriptor.displayName=Send build artifacts over Dropbox
 
 hostconfig.descriptor=Dropbox Account Configuration
+hostconfig.formvalidation.root=Remote directory must be an absolute path. (Starting with a '/')
 publisher.descriptor=Dropbox Publisher
 transfer.descriptor=Dropbox Transfer
 retry.descriptor=Dropbox Retry
