--- a/src/main/resources/org/jenkinsci/plugins/publishoverdropbox/impl/Messages.properties
+++ b/src/main/resources/org/jenkinsci/plugins/publishoverdropbox/impl/Messages.properties
@@ -33,23 +33,22 @@ retry.descriptor=Dropbox Retry
 publisherLabel.descriptor=Dropbox Publisher Label
 
 exception.dropbox.url=Failed to build URL to create a connection
-exception.dropbox.folder=Failed GET Folder on [{0}]
+exception.dropbox.folder=Failed GET Folder on {0}
 exception.dropbox.delete=Failed to delete file or folder
 exception.dropbox.deleteIsNotFolder=Path does not contain a folder to clear
 exception.dropbox.body=Failed to encode body
 
 exception.rest.connection=Failed to open connection to server
 exception.rest.model=Failed to create response model
-exception.rest.http=HTTP [{0}] error [{1}] : [{2}]
+exception.rest.http=HTTP {0} error {1} {2}
 
-exception.bap.createclient=Failed to connect and initialize Dropbox connection. Message: [{0}]
-exception.bap.logInFailed=Failed to log in with username [{0}] - check username and password
+exception.bap.createclient=Failed to connect and initialize Dropbox connection. Message: {0}
 
 exception.noSourceFiles=A Transfer Set must contain Source files - if you really want to include everything, set Source files to **/* or **\\*
-exception.exceptionOnDisconnect=Exception when disconnecting from server. Message [{0}]
-exception.cwdException=Exception when changing to Dropbox directory [{0}]
-exception.failedToStoreFile=Could not write file. Server message: [{0}]
-exception.mkdirException=Exception when creating Dropbox directory [{0}]
+exception.exceptionOnDisconnect=Exception when disconnecting from server. Message {0}
+exception.cwdException=Exception when changing to Dropbox directory {0}
+exception.failedToStoreFile=Could not write file. Server message: {0}
+exception.mkdirException=Exception when creating Dropbox directory {0}
 
 console.message.prefix=Dropbox:
 log.disconnectQuietly=Exception disconnecting
