--- a/src/main/resources/org/jenkinsci/plugins/publishoverdropbox/impl/Messages.properties
+++ b/src/main/resources/org/jenkinsci/plugins/publishoverdropbox/impl/Messages.properties
@@ -21,38 +21,36 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 # THE SOFTWARE.
 #
-
 DropboxTokenImpl.api_token=Dropbox API token
 descriptor.displayName=Send build artifacts over Dropbox
-
 hostconfig.descriptor=Dropbox Account Configuration
 hostconfig.formvalidation.root=Remote directory must be an absolute path. (Starting with a '/')
 publisher.descriptor=Dropbox Publisher
 transfer.descriptor=Dropbox Transfer
 retry.descriptor=Dropbox Retry
 publisherLabel.descriptor=Dropbox Publisher Label
-
+console.message.prefix=Dropbox:
+log.disconnectQuietly=Exception disconnecting
+form.testConnection.ok=Success
+form.testConnection.error=Failed to connect or change directory
+# Exceptions
+exception.dropbox.folder.create=Failed to create folder {0}
+exception.dropbox.folder.delete=Failed to delete, {0} does not contain a folder to clear
+exception.dropbox.folder.delete.root=Failed to delete, {0} seems to the root folder
+exception.dropbox.folder.prunedate=Failed to prune a folder, {0} did not parse
+exception.dropbox.folder.list=Failed to list folder content, {0} was not listed
+exception.dropbox.folder.list.cursor=Failed to list more of folder content
+exception.dropbox.file.upload.simple=Failed to upload the file, {0} is not uploaded
+exception.dropbox.file.metadata=Failed to retrieve data on the file, info on {0} is unknown
 exception.dropbox.url=Failed to build URL to create a connection
-exception.dropbox.folder=Failed GET Folder on {0}
-exception.dropbox.delete=Failed to delete file or folder
-exception.dropbox.deleteIsNotFolder=Path does not contain a folder to clear
-exception.dropbox.body=Failed to encode body
-
+# Reuse?
 exception.rest.connection=Failed to open connection to server
 exception.rest.model=Failed to create response model
 exception.rest.http=HTTP {0} error {1} {2}
-
 exception.bap.createclient=Failed to connect and initialize Dropbox connection. Message: {0}
 exception.bap.logInFailed=Failed to log in with username {0} - check username and password
-
 exception.noSourceFiles=A Transfer Set must contain Source files - if you really want to include everything, set Source files to **/* or **\\*
 exception.exceptionOnDisconnect=Exception when disconnecting from server. Message {0}
 exception.cwdException=Exception when changing to Dropbox directory {0}
 exception.failedToStoreFile=Could not write file. Server message: {0}
 exception.mkdirException=Exception when creating Dropbox directory {0}
-
-console.message.prefix=Dropbox:
-log.disconnectQuietly=Exception disconnecting
-
-form.testConnection.ok=Success
-form.testConnection.error=Failed to connect or change directory
