Make builder to create JsonObjectRequests, have simple uploads work again

--- a/src/main/resources/org/jenkinsci/plugins/publishoverdropbox/impl/Messages.properties
+++ b/src/main/resources/org/jenkinsci/plugins/publishoverdropbox/impl/Messages.properties
@@ -46,7 +46,7 @@ exception.dropbox.url=Failed to build URL to create a connection
 # Reuse?
 exception.rest.connection=Failed to open connection to server
 exception.rest.model=Failed to create response model
-exception.rest.http=HTTP {0} error {1} {2}
+exception.rest.http=HTTP {0} error {1}
 exception.bap.createclient=Failed to connect and initialize Dropbox connection. Message: {0}
 exception.bap.logInFailed=Failed to log in with username {0} - check username and password
 exception.noSourceFiles=A Transfer Set must contain Source files - if you really want to include everything, set Source files to **/* or **\\*
